# youtube_demos

./: LICENSE  README.md
eda_pandas_duckdb/: pyproject.toml
eda_pandas_duckdb/src/: eda_salaries.ipynb  salaries_cleaned.csv
fastapi_mlflow_pydanticai/: pyproject.toml
fastapi_mlflow_pydanticai/src/customer_support/backend/: agents.py  api.py  middlewares.py
fastapi_mlflow_pydanticai/src/customer_support/frontend/: app.py
fastapi_mlflow_pydanticai/src/customer_support/monitoring/: mlflow.db  monitoring.ipynb  prompt_engineering.ipynb
fastapi_mlflow_pydanticai/src/customer_support/utils/: constants.py
llm_openrouter_pydanticai/: llm_intro.ipynb  pyproject.toml
llmops_project/part3/rag/: pyproject.toml
llmops_project/part3/rag/src/rag/: docker-compose.yaml
llmops_project/part3/rag/src/rag/backend/: agents.py  api.py
llmops_project/part3/rag/src/rag/frontend/: app.py  pyproject.toml
llmops_project/part3/rag/src/rag/knowledge_base/articles.lance/_transactions/: 3-0a37e0b5-9df0-4087-a598-831803678151.txn
mlflow_llm_judge_fundamentals/: email_extractor.ipynb  prompt_creation.ipynb
powerbi_design/: README.md
powerbi_publish/: README.md
powerbi_report_dashboard/: README.md
powerbi_semantic_modeling/: README.md
powerbi_setup_student/: README.md
pydanticai_fastapi_chatbot/: pyproject.toml
streamlit_packaging/: pyproject.toml
streamlit_packaging/src/salaries/: app.py
streamlit_packaging/src/salaries/assets/style/: dashboard.css
streamlit_packaging/src/salaries/components/: filters.py  kpis.py  visualizations.py
streamlit_packaging/src/salaries/pages/: dashboard.py  home.py  raw_data.py
streamlit_packaging/src/salaries/utils/: constants.py  helpers.py
(+41 files in other folders)
