[project]
name = "customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kokchun", email = "kokchungiang@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "ipykernel>=7.2.0",
    "litellm>=1.82.6",
    "mlflow>=3.10.1",
    "pydantic-ai>=1.70.0",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
customer-support = "customer_support:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
