[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "kokchun", email = "kokchungiang@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
 "pypdf>=6.10.2",
 "backend",
 "frontend",
 "litellm>=1.83.0",
]

[tool.uv.sources]
backend = { workspace = true }
frontend = { workspace = true }

[tool.uv.workspace]
members = ["src/rag/frontend", "src/rag/backend"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
